# VizAly-Foresight

./: .gitignore  .nfs000000065ae287ec0000a522  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  build.sh  buildAll.sh  buildAllDependencies.sh  buildCori.sh  buildDependencies.sh  build_macOS.sh  cinema_explorer.html  clean.sh  config.sh  readme.md  requirements.txt  results.md
Analysis/: HACC_Analysis_readme.md  LICENSE  README.md  pat_cinema.py  pat_hacc.py  pat_hacc_query.py  pat_nyx.py  pat_nyx_cinema.py  selective_analysis.py  setup.py
CBench/: CMakeLists.txt  README.md  main.cpp  metrics.csv  test.cpp
CBench/analysis/: analyzer.hpp  halo_entropy_analyzer.hpp  main.cpp  merge.cpp  post-process.hpp  tools.h
CBench/compressors/: compressorFactory.hpp  compressorIncludes.h  compressorInterface.hpp  readme.md
CBench/compressors/BLOSC/: CMakeLists.txt  blosccompressor.hpp
CBench/compressors/BigCrunch/: CMakeLists.txt
CBench/compressors/Isabela/: CMakeLists.txt  Isabelacompressor.hpp
CBench/compressors/LossyWave/: CMakeLists.txt
CBench/compressors/MGARD/: CMakeLists.txt  MGARDcompressor.hpp
CBench/compressors/SZ/: CMakeLists.txt  SZcompressor.hpp
CBench/compressors/SZ3/: CMakeLists.txt  SZ3compressor.hpp
CBench/compressors/SZ_gpu/: CMakeLists.txt  SZcompressorGpu.hpp
CBench/compressors/fpzip/: CMakeLists.txt  fpzipcompressor.hpp
CBench/compressors/snwpac/: CMakeLists.txt  snwpacCompressor.hpp
CBench/compressors/zfp/: CMakeLists.txt  zfpCompressor.hpp
CBench/compressors/zfp_gpu/: CMakeLists.txt  zfpCompressorGpu.hpp
CBench/dataLoader/: README.md  dataLoaderFactory.hpp  dataLoaderIncludes.h  dataLoaderInterface.hpp  readme.md
CBench/dataLoader/AMReX/: PltDataLoader.hpp
CBench/dataLoader/Binary/: BinaryDataLoader.hpp
CBench/dataLoader/Generic_Binary/: GenericBinaryLoader.hpp  README.md
CBench/dataLoader/HACC/: HACCDataLoader.hpp  README.md  gioData.hpp
CBench/dataLoader/NYX/: CMakeLists.txt  NYXDataLoader.hpp  README.md
CBench/dataLoader/VPIC_GDA/: GDADataLoader.hpp  README.md
CBench/dataLoader/VTK/: CMakeLists.txt  README.md  VTKDataLoader.hpp
CBench/dataLoader/VTP/: VTPDataLoader.hpp
CBench/metrics/: absoluteError.hpp  errorDistribution.hpp  histMetric.hpp  meansquareError.hpp  metricFactory.hpp  metricIncludes.h  metricInterface.hpp  minmaxMetric.hpp  psnrError.hpp  readme.md  relativeError.hpp
CBench/utils/: debugLog.hpp  log.hpp  memory.hpp  strConvert.hpp  timer.hpp  timers.hpp  utils.hpp
ExternalDependencies/: buildExternal.sh
PAT/: NYX_Analysis_readme.md  gimletAnalysis.py  gimletAnalysisPlot.py  gimletInput.json  pat_hacc.py  pat_nyx.py  pat_nyx_cinema.py  plot_gio_distribution.py  workflow_a.py  workflow_b.py
Workflow/: README.md  setup.py
analysisWorkflow/: HACC.darwin_setup  HACC_readme.md  NYX_Analysis_readme.md  create_cinema.py  derive_cinema  (+19 more)
source/: CMakeLists.txt
source/benchmarks/BigCrunch/: CMakeLists.txt
source/benchmarks/BigCrunch/include/: compression_benchmark.hpp  decompression_benchmark.hpp
source/benchmarks/BigCrunch/src/: compression_benchmark.cpp  decompression_benchmark.cpp  main.cpp
source/benchmarks/blosc/: CMakeLists.txt
source/benchmarks/blosc/include/: compression_benchmark.hpp  decompression_benchmark.hpp
source/benchmarks/blosc/src/: compression_benchmark.cpp  decompression_benchmark.cpp  main.cpp
source/benchmarks/fpzip/: CMakeLists.txt
source/benchmarks/fpzip/include/: compression_benchmark.hpp  decompression_benchmark.hpp
source/benchmarks/fpzip/src/: compression_benchmark.cpp  decompression_benchmark.cpp  main.cpp
source/benchmarks/gio/: CMakeLists.txt
source/benchmarks/gio/include/: compression_benchmark.hpp  decompression_benchmark.hpp
source/benchmarks/gio/src/: compression_benchmark.cpp  decompression_benchmark.cpp  main.cpp
source/benchmarks/lzma/: CMakeLists.txt
source/benchmarks/lzma/include/: compression_benchmark.hpp  decompression_benchmark.hpp
source/benchmarks/lzma/src/: compression_benchmark.cpp  decompression_benchmark.cpp  main.cpp
source/benchmarks/sz/: CMakeLists.txt
source/benchmarks/sz/include/: compression_benchmark.hpp  decompression_benchmark.hpp
source/benchmarks/sz/src/: compression_benchmark.cpp  decompression_benchmark.cpp  main.cpp
source/benchmarks/zfp/: CMakeLists.txt
source/benchmarks/zfp/include/: compression_benchmark.hpp  decompression_benchmark.hpp
source/benchmarks/zfp/src/: compression_benchmark.cpp  decompression_benchmark.cpp  main.cpp
source/data_loader/: CMakeLists.txt
source/data_loader/include/: data_field.hpp  data_handler.hpp  data_loader.hpp  hacc_data.hpp  mpas_data.hpp
source/data_loader/src/: data_field.cpp  data_loader.cpp  hacc_data.cpp  mpas_data.cpp
source/utility/: CMakeLists.txt
source/utility/include/: benchmark.hpp  error.hpp  fio.hpp  log.hpp  stopwatch.hpp
source/utility/src/: benchmark.cpp  error.cpp  fio.cpp  stopwatch.cpp
src/: CMakeLists.txt  CMakeLists.txt.cori  main.cpp
src/compressors/: compressorFactory.hpp  compressorIncludes.h  compressorInterface.hpp  readme.md
src/compressors/BLOSC/: BLOSCCompressor.hpp  CMakeLists.txt  blosccompressor.hpp
src/compressors/BigCrunch/: BigCrunchcompressor.hpp  CMakeLists.txt
src/compressors/Isabela/: CMakeLists.txt  Isabelacompressor.hpp
src/compressors/LossyWave/: CMakeLists.txt  LossyWavecompressor.hpp
src/compressors/MGARD/: CMakeLists.txt  MGARDcompressor.hpp
src/compressors/SZ/: CMakeLists.txt  SZcompressor.hpp
src/compressors/fpzip/: CMakeLists.txt  fpzipcompressor.hpp
src/compressors/zfp/: CMakeLists.txt  zfpCompressor.hpp
src/dataLoader/: dataLoaderInterface.hpp
src/dataLoader/Binary/: BinaryDataLoader.hpp
src/dataLoader/HACC/: HACCDataLoader.hpp  gioData.hpp
src/dataLoader/NYX/: NYXDataLoader.hpp
src/metrics/: absoluteError.hpp  error.hpp  meansquareError.hpp  metricFactory.hpp  metricIncludes.h  metricInterface.hpp  metricsFactory.hpp  psnrError.hpp  readme.md  relativeError.hpp
src/utils/: benchmark.cpp  benchmark.hpp  json.hpp  log.hpp  memory.hpp  strConvert.hpp  timer.hpp  utils.hpp
(+585 files in other folders)
